--- a/src/lib/static/css/futaba.css
+++ b/src/lib/static/css/futaba.css
@@ -378,6 +378,12 @@ span.newPostCount {
     width: 70%;
 }
 
+.navbar.navbarFrame {
+    text-align: left;
+    margin-left: 4px;
+    font-size: 0.8em;
+}
+
 .navbarItem {
     white-space: nowrap;
 }
