--- a/src/lib/template/01_base.tmpl
+++ b/src/lib/template/01_base.tmpl
@@ -101,8 +101,10 @@
 <div class="navbar">
     <% foreach board in boards %>
         <% item %>
-            <span class="navbarItem navbarItemBoard">[<a href="/<%= sitePathPrefix %><%= board.name %>"
-                  title="<%= board.title %>"><%= board.name %></a>] </span>
+            <% if ( !content.hiddenBoards.count(board.name) ) %>
+                <span class="navbarItem navbarItemBoard">[<a href="/<%= sitePathPrefix %><%= board.name %>"
+                      title="<%= board.title %>"><%= board.name %></a>] </span>
+            <% end %>
         <% end %>
     <% end %>
     <% if ( content.mode.name != "ascetic" ) %>
@@ -244,6 +246,27 @@
                         <% else %>
                             <input type="checkbox" name="draftsByDefault" value="true" />
                         <% end %>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <%= hiddenBoardsLabelText %>
+                    </td>
+                    <td>
+                        <div class="scrollAreaH60" name="hiddenBoards">
+                            <% foreach board in boards %>
+                                <% item %>
+                                    <% if ( content.hiddenBoards.count(board.name) ) %>
+                                        <input type="checkbox" name="board_<%= board.name %>" value="true"
+                                               checked="true">[<%= board.name %>] <%= board.title %></input>
+                                    <% else %>
+                                        <input type="checkbox" name="board_<%= board.name %>"
+                                               value="true">[<%= board.name %>] <%= board.title %></input>
+                                    <% end %>
+                                    <br />
+                                <% end %>
+                            <% end %>
+                        </div>
                     </td>
                 </tr>
                 <tr>
