--- a/src/lib/static/css/futaba.css
+++ b/src/lib/static/css/futaba.css
@@ -117,6 +117,12 @@ hr {
     display: inline;
 }
 
+.scrollAreaH60 {
+    overflow: auto;
+    max-height: 60px;
+    border: 1px solid #800000;
+}
+
 /*
     Ban
 */
