--- a/src/lib/template/frame_list.tmpl
+++ b/src/lib/template/frame_list.tmpl
@@ -18,11 +18,13 @@
                 <div class="navbar navbarFrame">
                     <% foreach board in boards %>
                         <% item %>
-                            <span class="navbarItem navbarItemBoard">
-                                [<%= board.name %>]
-                                <a href="/<%= sitePathPrefix %><%= board.name %>" target="page"><%= board.title %></a>
-                            </span>
-                            <br />
+                            <% if ( !content.hiddenBoards.count(board.name) ) %>
+                                <span class="navbarItem navbarItemBoard">
+                                    [<%= board.name %>]
+                                    <a href="/<%= sitePathPrefix %><%= board.name %>" target="page"><%= board.title %></a>
+                                </span>
+                                <br />
+                            <% end %>
                         <% end %>
                     <% end %>
                     <% if ( content.mode.name != "ascetic" ) %>
