--- a/src/lib/template/01_base.tmpl
+++ b/src/lib/template/01_base.tmpl
@@ -293,6 +293,22 @@
                         </select>
                     </td>
                 </tr>
+                <tr>
+                    <td>
+                        <%= showNewPostsLabelText %>
+                    </td>
+                    <td>
+                        <input type="checkbox" name="showNewPosts" />
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <%= showYoutubeVideoTitleLabelText %>
+                    </td>
+                    <td>
+                        <input type="checkbox" name="showYoutubeVideosTitles" />
+                    </td>
+                </tr>
             </tbody>
         </table>
     </fieldset>
