--- a/src/lib/template/01_base.tmpl
+++ b/src/lib/template/01_base.tmpl
@@ -309,6 +309,22 @@
                         <input type="checkbox" name="showYoutubeVideosTitles" />
                     </td>
                 </tr>
+                <tr>
+                    <td>
+                        <%= checkFileExistenceLabelText %>
+                    </td>
+                    <td>
+                        <input type="checkbox" name="checkFileExistence" />
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <%= showAttachedFilePreviewLabelText %>
+                    </td>
+                    <td>
+                        <input type="checkbox" name="showAttachedFilePreview" />
+                    </td>
+                </tr>
             </tbody>
         </table>
     </fieldset>
