--- a/src/lib/template/01_base.tmpl
+++ b/src/lib/template/01_base.tmpl
@@ -87,6 +87,7 @@
                     <input type="submit" name="submit" value="<%= loginButtonText %>" class="button" />
                 </form>
             <% end %>
+            <img src="/<%= sitePathPrefix %>img/question.png" title="<%= loginSystemDescriptionText %>">
         <% end %>
         <% if ( !content.loginMessageText.empty() ) %>
             <img src="/<%= sitePathPrefix %>img/<%= loginIconName %>" title="<%= loginMessageText %>">
