--- a/src/lib/ololord_static_img.qrc
+++ b/src/lib/ololord_static_img.qrc
@@ -288,5 +288,8 @@
         <file>static/img/moder.png</file>
         <file>static/img/user.png</file>
         <file>static/img/user_registered.png</file>
+        <file>static/img/question.png</file>
+        <file>static/img/application_pdf_logo.png</file>
+        <file>static/img/pdf_file.png</file>
     </qresource>
 </RCC>
