--- a/src/lib/template/01_base.tmpl
+++ b/src/lib/template/01_base.tmpl
@@ -324,6 +324,22 @@
                         <input type="checkbox" name="showAttachedFilePreview" />
                     </td>
                 </tr>
+                <tr>
+                    <td>
+                        <%= showLeafButtonsLabelText %>
+                    </td>
+                    <td>
+                        <input type="checkbox" name="showLeafButtons" />
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <%= leafThroughImagesOnlyLabelText %>
+                    </td>
+                    <td>
+                        <input type="checkbox" name="leafThroughImagesOnly" />
+                    </td>
+                </tr>
             </tbody>
         </table>
     </fieldset>
