--- a/src/lib/template/11_board.tmpl
+++ b/src/lib/template/11_board.tmpl
@@ -78,6 +78,8 @@
         <input type="hidden" id="lastPostNumber" value="<%= lastPostNumber %>" />
         <% include customHeader() %>
         <% include navigationButton("bottom") %>
+        <% include leafButton("previous") %>
+        <% include leafButton("next") %>
         <% include navigationButton("top") %>
         <a id="top"></a>
         <% include settings() %>
