--- a/src/lib/template/12_thread.tmpl
+++ b/src/lib/template/12_thread.tmpl
@@ -36,6 +36,8 @@
 <% end %>
 <% include customHeader() %>
 <% include navigationButton("bottom") %>
+<% include leafButton("previous") %>
+<% include leafButton("next") %>
 <% include navigationButton("top") %>
 <input id="noNewPostsText" type="hidden" value="<%= noNewPostsText %>" />
 <input id="newPostsText" type="hidden" value="<%= newPostsText %>" />
