--- a/src/lib/ololord_static_img.qrc
+++ b/src/lib/ololord_static_img.qrc
@@ -291,5 +291,7 @@
         <file>static/img/question.png</file>
         <file>static/img/application_pdf_logo.png</file>
         <file>static/img/pdf_file.png</file>
+        <file>static/img/left.png</file>
+        <file>static/img/right.png</file>
     </qresource>
 </RCC>
