Add ability to set image zoom sensitivity

--- a/src/lib/template/01_base.tmpl
+++ b/src/lib/template/01_base.tmpl
@@ -340,6 +340,14 @@
                         <input type="checkbox" name="leafThroughImagesOnly" />
                     </td>
                 </tr>
+                <tr>
+                    <td>
+                        <%= imageZoomSensitivityLabelText %>
+                    </td>
+                    <td>
+                        <input type="number" min="1" name="imageZoomSensitivity" />
+                    </td>
+                </tr>
             </tbody>
         </table>
     </fieldset>
