--- a/src/lib/template/01_base.tmpl
+++ b/src/lib/template/01_base.tmpl
@@ -348,6 +348,38 @@
                         <input type="number" min="1" name="imageZoomSensitivity" />
                     </td>
                 </tr>
+                <tr>
+                    <td>
+                        <%= autoUpdateThreadsByDefaultLabelText %>
+                    </td>
+                    <td>
+                        <input type="checkbox" name="autoUpdateThreadsByDefault" />
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <%= autoUpdateIntervalLabelText %>
+                    </td>
+                    <td>
+                        <input type="number" min="1" name="autoUpdateInterval" />
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <%= showAutoUpdateTimerLabelText %>
+                    </td>
+                    <td>
+                        <input type="checkbox" name="showAutoUpdateTimer" />
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <%= showAutoUpdateDesktopNotificationsLabelText %>
+                    </td>
+                    <td>
+                        <input type="checkbox" name="showAutoUpdateDesktopNotifications" />
+                    </td>
+                </tr>
             </tbody>
         </table>
     </fieldset>
