--- a/src/lib/template/12_thread.tmpl
+++ b/src/lib/template/12_thread.tmpl
@@ -13,7 +13,7 @@
     <% end %>
     <% if ( content.mode.name != "ascetic" ) %>
         [<input onclick="lord.setAutoUpdateEnabled(this);" id="autoUpdate_<%= position %>"
-                type="checkbox"><%= autoUpdateText %></input>]
+            type="checkbox" /><span name="autoUpdateText"><%= autoUpdateText %></span>]
     <% end %>
 </div>
 <% end template %>
@@ -39,6 +39,7 @@
 <% include leafButton("previous") %>
 <% include leafButton("next") %>
 <% include navigationButton("top") %>
+<input id="autoUpdateText" type="hidden" value="<%= autoUpdateText %>" />
 <input id="noNewPostsText" type="hidden" value="<%= noNewPostsText %>" />
 <input id="newPostsText" type="hidden" value="<%= newPostsText %>" />
 <input id="currentThreadNumber" type="hidden" value="<%= opPost.number %>" />
