--- a/src/lib/template/01_base.tmpl
+++ b/src/lib/template/01_base.tmpl
@@ -341,7 +341,7 @@
                     </tr>
                 </tbody>
             </table>
-            <table name="2">
+            <table name="2" style="display: none;">
                 <tbody>
                     <tr>
                         <td>
